--- a/templates/default/sv-haproxy-run.erb
+++ b/templates/default/sv-haproxy-run.erb
@@ -1,3 +1,3 @@
 #!/bin/sh
 exec 2>&1
-exec <%= @options[:exec] %> -db -f <%= @options[:config] %>
+exec chpst -u <%= @options[:user] %> <%= @options[:exec] %> -db -f <%= @options[:config] %>
